--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="style.css">
         <script src="main.js" defer></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
+            src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+            defer></script>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -18,13 +19,17 @@
         <h5 id="clock"></h5>
         <div class="container">
             <h1>Weather</h1>
-            <form class="container" onsubmit="connectDataDisplayWeather(); return false;">
+            <form class="container"
+                onsubmit="connectDataDisplayWeather(); return false;">
                 <label for="cityBox">City: </label>
                 <input type="text" id="cityBox">
                 <button>Show Weather</button>
             </form>
-            <h2 id="cityNameTitle"></h2>
-            <div class="container" id="tempNowDiv"></div>
+            <div class="card" id="nameNowTemperatureDiv">
+                <span id="cityNameTitle"></span>
+                <span id="tempNowSpan"></span>
+                <span id="tempNowIconSpan"></span>
+            </div>
         </div>
         <div id="divContainer" class="container">
             <!-- <div class="card" style="width: 18rem;">
